--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,3 @@
-@for (item of datos; track $index) {
-  <div class="card">
-    <h2>{{ item.message }}</h2>
-  </div>
-}
+<app-header-user/>
+<app-nav-user/>
+<app-main-user/>
