feat: :sparkles: Routes aplicados

--- a/frontend/src/app/home/header-user/nav-user/nav-user.component.html
+++ b/frontend/src/app/home/header-user/nav-user/nav-user.component.html
@@ -2,7 +2,7 @@
     <ul class="nav__container">
         @for (categorie of catalogService.categiriesService.categories; track categorie.name) {
             <li [class.active]="categorie.active">
-                <a (click)="sendCategory($event)" [id]="categorie.id" href="#">{{ categorie.name }}</a>
+                <a (click)="sendCategory($event)" [id]="categorie.id" [routerLink]="['/home/category', categorie.id]">{{ categorie.name }}</a>
             </li>
         }
     </ul>
