--- a/frontend/src/variables.css
+++ b/frontend/src/variables.css
@@ -5,6 +5,7 @@
     --color-4: #F6752C;
     --color-5: #FFAA2C;
     --color-6: #FE7122;
+    --color-7: #8E92A0;
 }
 @font-face {
     font-family: "Signika-Regular";
