--- a/frontend/src/app/create-product-user/main-user/product-parts/product-parts.component.html
+++ b/frontend/src/app/create-product-user/main-user/product-parts/product-parts.component.html
@@ -1,1 +1,18 @@
-<p>product-parts works!</p>
+<section class="section__options">
+    <h5>Choose Topping parts</h5>
+   <ul class="ul__container-options">
+        <li class="active">
+            <a href="#">
+                <h5>Left Half</h5>
+                <img src="/assets/img/pizza-left.png" alt="" srcset="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/assets/img/pizza-right.png" alt="" srcset="">
+                <h5>Right Half</h5>
+            </a>
+        </li>
+   </ul>
+
+</section>
