--- a/frontend/src/app/create-product-user/main-user/main-user.component.css
+++ b/frontend/src/app/create-product-user/main-user/main-user.component.css
@@ -109,13 +109,15 @@ main{
     min-width: 48.5%; /* Ajustado para mantener el gap del 2% */
 }
 
-/* Si hay exactamente 3 elementos */
 .ul__container > li:first-child:nth-last-child(3),
 .ul__container > li:first-child:nth-last-child(3) ~ li {
     min-width: 31.33%; /* Ajustado para mantener el gap */
 }
-/* Si hay 4 o más elementos (ya configurado en el estilo base como 23%) */
-
+/* Si hay 4 o más elementos ajustar el texto*/
+.ul__container > li:first-child:nth-last-child(n+4) a,
+.ul__container > li:first-child:nth-last-child(n+4) ~ li a{
+    width: 19vw;
+}
 .ul__container li a{
     height: 100%;
     text-decoration: none;
@@ -123,18 +125,19 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 .ul__container li a h5{
     color: var(--color-7);
     font-family: "Signika-Regular";
     font-size: 14px;
     font-weight: normal;
+    text-align: center;
 }
 .ul__container li a span{
     color: var(--color-2);
     font-family: "Signika-SemiBold";
     font-size: 16px;
+    text-align: center;
 }
 .ul__container > li.active{
     border: 1px solid var(--color-3);
@@ -146,7 +149,17 @@ main{
 .ul__container > li.active a span{
     color: var(--color-5);
 }
-
+.section__options__list > li{
+    min-width: 31.33%; /* Ajustado para mantener el gap */
+}
+.section__options__list > li a{
+    width: 27vw !important;
+}
+.section__options__list > li a span{
+    color: var(--color-7);
+    font-weight: normal;
+    text-align: center;
+}
 footer{
     display: flex;
     justify-content: center;
