--- a/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
@@ -1,6 +1,6 @@
 <section class="section__options">
     <h5>Topping Style</h5>
-    <ul class="ul__container-image">
+    <ul class="ul__container-image selected__chosen-topping">
         @for (topping of toppingStyles; track topping.id) {
             <li [class.active]="topping.active">
                 <a [routerLink]="['/create-pizza', {
