feat: :ambulance: Se cambiaron los routes
Se separaron los componentes para la creación de la pizza. Además, se implementaron los servicios correspondientes y se corrigió un bug relacionado con las categorías y el buscador.

--- a/frontend/src/app/create-product-user/header-user/header-user.component.html
+++ b/frontend/src/app/create-product-user/header-user/header-user.component.html
@@ -1,19 +1,17 @@
 <header>
     <img src="/assets/img/banner2.png">
      <div class="div__breadcrumbs">
-          @switch (customProductService.customViews) {
-               @case ("create-pizza") {
-                    <a [routerLink]="['/home']"><img src="/assets/img/back.svg"></a>
-               }
-               @case ("left-half") {
-                    <a [routerLink]="['/create-pizza', 
-                    {
-                        size: customProductService.custom.size,
-                        crust: customProductService.custom.crust,
-                        topping: customProductService.custom.topping
-                    }]"><img src="/assets/img/back.svg"></a>
-               }
+          @if (customProductService.customViews == "create-pizza") {
+               <a [routerLink]="['/home']"><img src="/assets/img/back.svg"></a>
+          }@else if (customProductService.customViews == "left-half" || customProductService.customViews == "right-half") {
+               <a [routerLink]="['/create-pizza', 
+               {
+                   size: customProductService.custom.size,
+                   crust: customProductService.custom.crust,
+                   topping: customProductService.custom.topping
+               }]"><img src="/assets/img/back.svg"></a>
           }
-          <strong>Step {{ customProductService.page }}<span> / 2</span></strong>
+     
+          <strong>Paso {{ customProductService.page }}<span> / 2</span></strong>
      </div>
 </header>
