--- a/frontend/src/app/home/header-user/nav-user/nav-user.component.html
+++ b/frontend/src/app/home/header-user/nav-user/nav-user.component.html
@@ -1,8 +1,8 @@
 <nav>
     <ul class="nav__container">
-        @for (categorie of catalogService.categiriesService.categories; track categorie.name) {
-            <li [class.active]="categorie.active">
-                <a (click)="sendCategory($event)" [id]="categorie.id" [routerLink]="['/home/category', categorie.id]">{{ categorie.name }}</a>
+        @for (categorie of catalogService.categiriesService.categories; track categorie.id) {
+            <li [class.active]="categorie.active == true">
+                <a [routerLink]="['/home/category', categorie.id]">{{ categorie.name }}</a>
             </li>
         }
     </ul>
