--- a/frontend/src/app/home/main-user/bubble-buy-user/bubble-buy-user.component.html
+++ b/frontend/src/app/home/main-user/bubble-buy-user/bubble-buy-user.component.html
@@ -1,5 +1,5 @@
 <section class="section__bubble">
-    <strong>£{{ shoppingCartService.shoppingCartData.total }}</strong>
+    <strong>{{ shoppingCartService.shoppingCartData.total }}</strong>
     <div>
         <span>{{ shoppingCartService.shoppingCartData.count }}</span>
         <img src="/assets/img/pizza-float.png">
