--- a/frontend/src/app/create-product-user/main-user/choose-toppings-product/choose-toppings-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/choose-toppings-product/choose-toppings-product.component.html
@@ -1,5 +1,5 @@
 <section class="section__options">
-    <h5>Choose Toppings</h5>
+    <h5>Elija ingredientes</h5>
     <ul class="ul__container section__options__list">
         @for (choose of chooses; track choose.id) {
             <li [class.active]="choose.active">
