--- a/frontend/src/app/create-product-user/main-user/size-product/size-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/size-product/size-product.component.html
@@ -1,7 +1,7 @@
 <section class="section__options">
-    <h5>Size</h5>
+    <h5>Tamaño</h5>
     <ul class="ul__container">
-        @for (size of sizes; track size.id) {
+        @for (size of customProductService.sizeProductService.sizes; track size.id) {
             <li [class.active]="size.active">
                 <a [routerLink]="['/create-pizza', {
                         size: size.id,
@@ -9,8 +9,9 @@
                         topping: customProductService.custom.topping
                     }]">
                     <!-- queryParamsHandling="merge" -->
-                    <h5>{{ size.name }}</h5>
-                    <span>{{ size.price }}</span>
+                    <h5>{{ size.name }} </h5>
+                    <h5><small>{{ customProductService.sizeProductService.sizeView(size) }}</small></h5>
+                    <span>{{ customProductService.sizeProductService.sizeForPrice(size) }}</span>
                 </a>
             </li>
         }           
