--- a/frontend/src/app/home/header-user/search-products/search-products.component.html
+++ b/frontend/src/app/home/header-user/search-products/search-products.component.html
@@ -1,3 +1,3 @@
 <form (submit)="$event.preventDefault()" class="form__search" action="?" method="GET">
-    <input #miInput [(ngModel)]="searchName" (input)="searchProductsPress($event)"  autocomplete="off" type="text" name="search" placeholder="Search ..." />
+    <input #miInput [(ngModel)]="searchName" (input)="searchProductsPress($event)"  autocomplete="off" type="text" name="search" placeholder="¿Se te antoja algo? 🍕" />
 </form>
