feat: :alien: Conexion al api de topping.
Se creó la migración, sus seeders y su servicio conectado al modelo Topping Styles.

--- a/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
@@ -8,7 +8,7 @@
                     crust: customProductService.custom.crust,
                     topping: topping.id
                 }]">
-                    <img [src]="topping.imageUrl" />
+                    <img [src]="topping.image_url" />
                 </a>
             </li>
         }
