feat: :alien: Conexion al api de Sauce
Se creó la migración, sus seeders y su servicio conectado al modelo Sauce.

--- a/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
@@ -9,7 +9,13 @@
                         sauce: sauce.id,
                         choose: customProductService.custom['left-half'].choose
                     }]">
-                        <span>{{ sauce.name }}</span>
+                        @if (sauce.price) {
+                            <h5>{{ sauce.name }}</h5>
+                            <span>{{ customProductService.sauceProductService.sauceForPrice(sauce) }}</span>
+                        }
+                        @else{
+                            <span>{{ sauce.name }}</span>
+                        }
                     </a>
                 }@else if (customProductService.customViews == "right-half") {
                     <a [routerLink]="['/right-half',
@@ -17,7 +23,13 @@
                         sauce: sauce.id,
                         choose: customProductService.custom['right-half'].choose
                     }]">
+                       @if (sauce.price) {
+                        <h5>{{ sauce.name }}</h5>
+                        <span>{{ customProductService.sauceProductService.sauceForPrice(sauce) }}</span>
+                    }
+                    @else{
                         <span>{{ sauce.name }}</span>
+                    }
                     </a>
                 }
             </li>
