--- a/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
@@ -2,37 +2,21 @@
     <h5>Salsa</h5>
     <ul class="ul__container section__options__list ">
         @for (sauce of customProductService.sauceProductService.sauces; track sauce.id) {
-            <li [class.active]="sauce.active">
-                @if (customProductService.customViews == "left-half") {
-                    <a [routerLink]="['/left-half',
+        <li [class.active]="sauce.active">
+            <a [routerLink]="['/'+customViews,
                     {
                         sauce: sauce.id,
-                        choose: customProductService.custom['left-half'].choose
+                        choose: customProductService.custom[customViews].choose
                     }]">
-                        @if (sauce.price) {
-                            <h5>{{ sauce.name }}</h5>
-                            <span>{{ customProductService.sauceProductService.sauceForPrice(sauce) }}</span>
-                        }
-                        @else{
-                            <span>{{ sauce.name }}</span>
-                        }
-                    </a>
-                }@else if (customProductService.customViews == "right-half") {
-                    <a [routerLink]="['/right-half',
-                    {
-                        sauce: sauce.id,
-                        choose: customProductService.custom['right-half'].choose
-                    }]">
-                       @if (sauce.price) {
-                        <h5>{{ sauce.name }}</h5>
-                        <span>{{ customProductService.sauceProductService.sauceForPrice(sauce) }}</span>
-                    }
-                    @else{
-                        <span>{{ sauce.name }}</span>
-                    }
-                    </a>
+                @if (sauce.price) {
+                    <h5>{{ sauce.name }}</h5>
+                    <span>{{ customProductService.sauceProductService.sauceForPrice(sauce) }}</span>
                 }
-            </li>
+                @else{
+                    <span>{{ sauce.name }}</span>
+                }
+            </a>
+        </li>
         }
     </ul>
 </section>
