feat: :ambulance: Se optimizaron los componentes.
ambién se creó el localStorage para mantener los datos relacionados con la creación de la pizza. Además, se separaron los estilos CSS de cada componente y se modificó la migración de la entidad sauce, ya que un campo no coincidía con el nombre esperado (price).

--- a/frontend/src/app/create-product-user/main-user/main-user.component.html
+++ b/frontend/src/app/create-product-user/main-user/main-user.component.html
@@ -11,7 +11,7 @@
             <router-outlet name="topping" />
         </main>
         <footer>
-            <a [routerLink]="[
+            <a class="next__button" [routerLink]="[
                 '/left-half',
                 {
                     sauce: customProductService.custom['left-half'].sauce,
@@ -27,9 +27,6 @@
             <router-outlet name="sauce" />
             <router-outlet name="choose" />
         </main>
-        <!-- <footer>
-            <a href="#">Add to Cart</a>
-        </footer> -->
-        <!-- queryParamsHandling="preserve" -->
+        <router-outlet name="add-cart" />
     }
 }
