--- a/frontend/src/app/create-product-user/main-user/choose-toppings-product/choose-toppings-product.component.css
+++ b/frontend/src/app/create-product-user/main-user/choose-toppings-product/choose-toppings-product.component.css
@@ -1,19 +1,118 @@
-.section__options__list li a {
-    position: relative;
-}
-.section__options__list li a img{
-    width: 35px;
-    height: 35px;
-    object-fit: cover;
-    position: absolute;
-    top: -22px;
-    right: -11px;
-    background-color: var(--color-1);
-    border-radius: 100%;
-    border: 1px solid #f4f3f3;
-    /* box-shadow: 0px 0px 4px 1px var(--color-5);  */
-}
-.section__options__list li.active a img{
-    border: 1px solid var(--color-4);
-    box-shadow: 0px 0px 4px 1px var(--color-5);
-}
+/* Estilos base de la sección */
+.section__options {
+    padding-top: 20px;
+ }
+ 
+ .section__options > h5 {
+     color: var(--color-7);
+     font-family: "Signika-SemiBold";
+     font-size: 15px;
+ }
+ 
+ /* Contenedor unificado - fusión de ul__container y section__options__list */
+ .ul__container {
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     gap: 3%;
+     padding-bottom: 3%;
+ }
+ 
+ .ul__container > li {
+     margin-top: 5%;
+     border-radius: 15px;
+     list-style: none;
+     padding: 5px;
+     height: 70px;
+     background-color: var(--color-1);
+     cursor: pointer;
+     touch-action: manipulation;
+     -ms-touch-action: manipulation;
+     -webkit-tap-highlight-color: transparent;
+     outline: none;
+     user-select: none;
+     /* Incorporado desde section__options__list > li */
+     min-width: 31.33%;
+ }
+ 
+ .ul__container li a {
+     height: 100%;
+     text-decoration: none;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     /* Incorporado desde section__options__list > li a */
+     width: 27vw !important;
+     position: relative;
+ }
+ 
+ .ul__container li a h5 {
+     color: var(--color-7);
+     font-family: "Signika-Regular";
+     font-size: 14px;
+     font-weight: normal;
+     text-align: center;
+ }
+ 
+ .ul__container li a span {
+     /* Incorporado desde section__options__list > li a span */
+     color: var(--color-2);
+     font-weight: normal;
+     text-align: center;
+     /* Mantenemos estos estilos de la clase original ul__container */
+     font-family: "Signika-SemiBold";
+     font-size: 16px;
+ }
+ 
+ /* Estilos para elementos activos */
+ .ul__container > li.active {
+     border: 1px solid var(--color-3);
+     box-shadow: 0px 0px 4px 1px var(--color-5);
+ }
+ 
+ .ul__container > li.active a h5 {
+     color: var(--color-2);
+ }
+ 
+ .ul__container > li.active a span {
+     color: var(--color-5);
+ }
+ 
+ /* Reglas de adaptación según cantidad de elementos */
+ .ul__container > li:first-child:last-child {
+     min-width: 50%;
+ }
+ 
+ .ul__container > li:first-child:nth-last-child(2),
+ .ul__container > li:first-child:nth-last-child(2) ~ li {
+     min-width: 48.5%;
+ }
+ 
+ .ul__container > li:first-child:nth-last-child(3),
+ .ul__container > li:first-child:nth-last-child(3) ~ li {
+     min-width: 31.33%;
+ }
+ 
+ .ul__container > li:first-child:nth-last-child(n+4) a,
+ .ul__container > li:first-child:nth-last-child(n+4) ~ li a {
+     width: 19vw;
+ }
+ 
+ /* Estilos específicos para imágenes - incorporados desde section__options__list */
+ .ul__container li a img {
+     width: 35px;
+     height: 35px;
+     object-fit: cover;
+     position: absolute;
+     top: -22px;
+     right: -11px;
+     background-color: var(--color-1);
+     border-radius: 100%;
+     border: 1px solid #f4f3f3;
+ }
+ 
+ .ul__container li.active a img {
+     border: 1px solid var(--color-4);
+     box-shadow: 0px 0px 4px 1px var(--color-5);
+ }
