--- a/frontend/src/app/create-product-user/main-user/main-user.component.css
+++ b/frontend/src/app/create-product-user/main-user/main-user.component.css
@@ -23,152 +23,26 @@ main{
     font-family: "Signika-Regular";
     font-size: 15px;
 }
-.section__options{
-   padding-top: 20px;
-}
-.section__options > h5{
-    color: var(--color-7);
-    font-family: "Signika-SemiBold";
-    font-size: 15px;
-}
-.ul__container,
-.ul__container-image{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 3%;
-    /* background: red; */
-    align-items: center;
-    padding-bottom: 3%;
-}
-
-.ul__container > li,
-.ul__container-image > li {
-    margin-top: 5%;
-    border-radius: 15px;
-    list-style: none;
-    padding: 5px;
-    min-width: 22.75%;
-    height: 70px;
-    background-color: var(--color-1);
-    cursor: pointer;
-    /* Al hacer varios click en la version movil no se hace zoom en el boton */
-    touch-action: manipulation;
-    -ms-touch-action: manipulation; /* Soporte para IE/Edge antiguos */
-
-    /* Elimina el resaltado gris al tocar en dispositivos móviles */
-    -webkit-tap-highlight-color: transparent; /* Safari/iOS */
-    outline: none;                            /* Evita resaltado de otros navegadores */
-    user-select: none;                        /* Previene selección de texto */
-}
-.ul__container-image{
-    padding-bottom: 0px;
-}
-.ul__container-image > li {
-    background: transparent;
-    height: 160px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 48.5%;
-}
-.ul__container-image > li a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-
-    -webkit-tap-highlight-color: transparent;
-    tap-highlight-color: transparent;
-    outline: none;
-}
-.ul__container-image > li.active a{
-    box-sizing: border-box;
-    width: 110px;
-    height: 110px;
-    outline: 4px solid var(--color-1);
-    /* border: 1px solid var(--color-1); */
-    box-shadow: 0px 0px 4px 7px var(--color-5);
-}
-.ul__container-image > li a img{
-    width: 110px;
-    height: 110px;
-    border-radius: 0px;
-    object-fit: cover;
-}
-/* Si hay solo 1 elemento */
-.ul__container > li:first-child:last-child,
-.ul__container-image > li:first-child:last-child {
-    min-width: 50%;
-}
-
-/* Si hay exactamente 2 elementos */
-.ul__container > li:first-child:nth-last-child(2),
-.ul__container > li:first-child:nth-last-child(2) ~ li,
-
-.ul__container-image > li:first-child:nth-last-child(2),
-.ul__container-image > li:first-child:nth-last-child(2) ~ li {
-    min-width: 48.5%; /* Ajustado para mantener el gap del 2% */
-}
-
-.ul__container > li:first-child:nth-last-child(3),
-.ul__container > li:first-child:nth-last-child(3) ~ li {
-    min-width: 31.33%; /* Ajustado para mantener el gap */
-}
-/* Si hay 4 o más elementos ajustar el texto*/
-.ul__container > li:first-child:nth-last-child(n+4) a,
-.ul__container > li:first-child:nth-last-child(n+4) ~ li a{
-    width: 19vw;
-}
-.ul__container li a{
-    height: 100%;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.ul__container li a h5{
-    color: var(--color-7);
-    font-family: "Signika-Regular";
-    font-size: 14px;
-    font-weight: normal;
-    text-align: center;
-}
-.ul__container li a span{
-    color: var(--color-2);
-    font-family: "Signika-SemiBold";
-    font-size: 16px;
-    text-align: center;
-}
-.ul__container > li.active{
-    border: 1px solid var(--color-3);
-    box-shadow: 0px 0px 4px 1px var(--color-5);
-}
-.ul__container > li.active a h5{
-    color: var(--color-2);
-}
-.ul__container > li.active a span{
-    color: var(--color-5);
-}
-.section__options__list > li{
-    min-width: 31.33%; /* Ajustado para mantener el gap */
-}
-.section__options__list > li a{
-    width: 27vw !important;
-}
-.section__options__list > li a span{
-    color: var(--color-7);
-    font-weight: normal;
-    text-align: center;
-}
 footer{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 18px;
 }
-footer a{
+footer .next__button{
+    width: 100%;
+    height: 56px;
+    background-color: var(--color-4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    text-decoration: none;
+    color: var(--color-1);
+    font-family: "Signika-SemiBold";
+    font-size: 17px;
+}
+footer .add__to__cart{
     width: 100%;
     height: 56px;
     background-color: var(--color-4);
