--- a/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/sauce-product/sauce-product.component.html
@@ -1,6 +1,6 @@
 <section class="section__options">
     <h5>Salsa</h5>
-    <ul class="ul__container section__options__list ">
+    <ul class="ul__container ">
         @for (sauce of customProductService.sauceProductService.sauces; track sauce.id) {
         <li [class.active]="sauce.active">
             <a [routerLink]="['/'+customViews,
