--- a/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.css
+++ b/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.css
@@ -1,24 +1,101 @@
-.selected__chosen-topping li{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-.topping__info{
-   text-align: center;
-}
-.topping__info h5{
+/* Estilos base de la sección */
+.section__options {
+    padding-top: 20px;
+ }
+
+ /* Contenedor unificado para topping-product */
+ .ul__container {
+     /* Propiedades de ul__container-image */
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     gap: 3%;
+     padding-bottom: 0px;
+ }
+ 
+ .ul__container > li {
+     /* Propiedades de ul__container-image > li */
+     margin-top: 5%;
+     border-radius: 15px;
+     list-style: none;
+     padding: 5px;
+     background: transparent;
+     height: 160px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     min-width: 48.5%;
+     cursor: pointer;
+     touch-action: manipulation;
+     -ms-touch-action: manipulation;
+     -webkit-tap-highlight-color: transparent;
+     outline: none;
+     user-select: none;
+     /* Propiedades de selected__chosen-topping li */
+     flex-direction: column;
+     gap: 12px;
+ }
+ 
+ /* Estilos para los enlaces e imágenes */
+ .ul__container > li a {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 100%;
+     -webkit-tap-highlight-color: transparent;
+     tap-highlight-color: transparent;
+     outline: none;
+ }
+ 
+ .ul__container > li.active a {
+     box-sizing: border-box;
+     width: 110px;
+     height: 110px;
+     outline: 4px solid var(--color-1);
+     box-shadow: 0px 0px 4px 7px var(--color-5);
+ }
+ 
+ .ul__container > li a img {
+     width: 110px;
+     height: 110px;
+     border-radius: 0px;
+     object-fit: cover;
+ }
+ 
+ /* Estilos para la información del topping */
+ .topping__info {
+     text-align: center;
+ }
+ 
+ .topping__info h5 {
     color: var(--color-7);
-    font-weight: normal;
-}
-.topping__info span{
-    
-}
-.selected__chosen-topping li.active .topping__info h5{
+    font-family: "Signika-SemiBold";
+    font-size: 15px;
+     font-weight: normal;
+ }
+ .topping__info span {
     color: var(--color-2);
-}
-.selected__chosen-topping li.active .topping__info span{
-    color: var(--color-5);
     font-family: "Signika-SemiBold";
     font-size: 16px;
     text-align: center;
 }
+ .ul__container > li.active .topping__info h5 {
+     color: var(--color-2);
+ }
+ 
+ .ul__container > li.active .topping__info span {
+     color: var(--color-5);
+     font-family: "Signika-SemiBold";
+     font-size: 16px;
+     text-align: center;
+ }
+ 
+ /* Reglas para adaptación según cantidad de elementos */
+ .ul__container > li:first-child:last-child {
+     min-width: 50%;
+ }
+ 
+ .ul__container > li:first-child:nth-last-child(2),
+ .ul__container > li:first-child:nth-last-child(2) ~ li {
+     min-width: 48.5%;
+ }
