--- a/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/topping-product/topping-product.component.html
@@ -1,6 +1,6 @@
 <section class="section__options">
     <h5>Estilo de cobertura</h5>
-    <ul class="ul__container-image selected__chosen-topping">
+    <ul class="ul__container">
         @for (topping of customProductService.toppingProductService.toppingStyles; track topping.id) {
             <li [class.active]="topping.active">
                 <div class="topping__info">
