feat: :sparkles: Cálculo total del carrito de compras
Se modificó el cálculo del carrito de compras. Ahora, al agregar una pizza personalizada, esta se inserta correctamente en el localStorage y se calcula el total a pagar. Además, se actualizó la funcionalidad para que cada vez que se agregue un nuevo ítem, se incremente automáticamente la cantidad total del carrito.

--- a/frontend/src/app/create-product-user/main-user/add-cart-product/add-cart-product.component.html
+++ b/frontend/src/app/create-product-user/main-user/add-cart-product/add-cart-product.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <a href="#">
+    <a (click)="addToCart($event)">
         <span>Añadir al carrito</span>
         <div class="section__bubble">
             <strong>{{ customProductService.calculateTotalInCart() }}</strong>
