chore: :ambulance: Se modificó la ubicación del endpoint de rutas de la API.
Se creó en el backend la ruta API para posteriormente generar la documentación. Además, se diseñó el carrito de compras, el cual actualmente funciona parcialmente.

--- a/frontend/src/app/home/main-user/bubble-buy-user/bubble-buy-user.component.html
+++ b/frontend/src/app/home/main-user/bubble-buy-user/bubble-buy-user.component.html
@@ -1,4 +1,4 @@
-<section class="section__bubble">
+<section [routerLink]="['/shopping-cart']" class="section__bubble" >
     <strong>{{ shoppingCartService.shoppingCartData.total }}</strong>
     <div>
         <span>{{ shoppingCartService.shoppingCartData.count }}</span>
