--- a/frontend/src/app/shopping-cart/main-user/main-user.component.html
+++ b/frontend/src/app/shopping-cart/main-user/main-user.component.html
@@ -2,6 +2,9 @@
     <section class="section__subtotal">
         <h1>Total a pagar</h1>
         <span>{{ shoppingCartService.shoppingCartData.total }}</span>
+        <p>
+            Para eliminar productos, haga clic en el icono "x" correspondiente. Puede ver los detalles de cada pizza haciendo clic en su imagen.
+        </p>
     </section>
     <router-outlet name="product-user" />
 </main>
