--- a/frontend/src/app/shopping-cart/main-user/product-user/product-user.component.html
+++ b/frontend/src/app/shopping-cart/main-user/product-user/product-user.component.html
@@ -3,19 +3,16 @@
         <img [src]="shoppingCart.imageUrl">
         <article class="product__card">
             <h4>{{ shoppingCart.name }}</h4>
-            @if (shoppingCart.amount == 1) {
-                <samp>{{ shoppingCartService.shoppingCartForPrice(shoppingCart.total) }}</samp>
-            }
-            @else {
-                <small>Precio por unidad: {{ shoppingCartService.shoppingCartForPrice(shoppingCart.price) }}</small> 
-                <samp>{{ shoppingCartService.shoppingCartForPrice(shoppingCart.total) }}</samp>
-            }
-            <p>Custom</p>
-            <form #myform action="?" method="POST">
-                <input type="submit" value="-">
-                <input type="number" name="amount" pattern="[0-9]+" [value]="shoppingCart.amount">
-                <input type="submit" value="+">
-                <input class="form__delete" type="submit" value="x">
+            <small>Precio por unidad: {{ shoppingCartService.shoppingCartForPrice(shoppingCart.price) }}</small> 
+            <samp>{{ shoppingCartService.shoppingCartForPrice(shoppingCart.total) }}</samp>
+            <p>{{shoppingCart.categories[0].name}}</p>
+            <form (submit)="updateCart($event, shoppingCart.id)" action="?" method="POST">
+                @if (shoppingCart.amount > 1) {
+                    <input type="submit" data-opcion="decreaseAmount" value="-" min="1">
+                }
+                <input (input)="updateCart($event, shoppingCart.id)" type="number" data-opcion="change" pattern="[0-9]+" name="amount" [value]="shoppingCart.amount" min="1">
+                <input type="submit" data-opcion="increaseAmount" value="+">
+                <input class="form__delete" data-opcion="remove" type="submit" value="x">
             </form>
         </article>
     </section>    
