--- a/frontend/src/app/shopping-cart/main-user/product-user/product-user.component.html
+++ b/frontend/src/app/shopping-cart/main-user/product-user/product-user.component.html
@@ -1,4 +1,4 @@
-@for (shoppingCart of products; track shoppingCart.id) {
+@for (shoppingCart of shoppingCartService.productsFilter; track shoppingCart.id) {
     <section>
         <img [src]="shoppingCart.imageUrl">
         <article class="product__card">
