--- a/frontend/src/app/shopping-cart/header-user/search-shopping-cart/search-shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/header-user/search-shopping-cart/search-shopping-cart.component.html
@@ -1,3 +1,3 @@
 <form (submit)="$event.preventDefault()" class="form__search" action="?" method="GET">
-    <input #miInput [(ngModel)]="searchName" (input)="searchProductsPress($event)"  autocomplete="off" type="text" name="search" placeholder="Buscar en tu carrito." />
+    <input #miInput [(ngModel)]="searchName" (input)="searchProducts($event)"  autocomplete="off" type="text" name="search" placeholder="Buscar en tu carrito." />
 </form>
